force-app/main/default/objects/Deal_Registration_Field_Mapping__mdt/Deal_Registration_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Deal Registration Field Mapping</label>
    <pluralLabel>Deal Registration Field Mappings</pluralLabel>
</CustomObject>