force-app/main/default/objects/Deal_Registration_Field_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>When checked, this mapping is included in the synchronization logic. Uncheck to disable a mapping without deleting it.</description>
</CustomField>