force-app/main/default/objects/Deal_Registration_Field_Mapping__mdt/fields/Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API_Name__c</fullName>
    <label>Source Field API Name</label>
    <description>API name of the field on Deal_Registration__c to read from during synchronization.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>